--- a/lightchaser.html
+++ b/lightchaser.html
@@ -5,6 +5,9 @@
         <script src="LightChaser.js" type="text/javascript"> </script>
         <script src="GameState.js" type="text/javascript"> </script>
         <script src="GameGrid.js" type="text/javascript"> </script>
+                <script src="Menu.js" type="text/javascript"> </script>
+        <script src="MenuItem.js" type="text/javascript"> </script>
+
         <script src="Light.js" type="text/javascript"> </script>
         <script src="InputManager.js" type="text/javascript"></script>
 
@@ -12,7 +15,7 @@
     </head>
     <body onload="LightChaser.GameManager.init()">
         <div id="game">
-                <canvas width="700" height="550" id="gameCanvas"></canvas>
+            <canvas width="700" height="550" id="gameCanvas"></canvas>
 
         </div>
     </body>
